src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts.expected
-----------------
INPUT
----------------- 
/** @gqlField */
export function greeting(thing: IThing): string {
  return `Hello ${thing.name}!`;
}

/** @gqlInterface */
interface IThing {
  name: string;
  // Should have greeting added
}

/**
 * @gqlInterface
 * @gqlImplements IThing
 */
interface IPerson extends IThing {
  name: string;
  // Should have greeting added
}

/** @gqlType */
class User implements IPerson, IThing {
  __typename: "User";
  name: string;
  // Should have greeting added
}

/** @gqlType */
class Admin implements IPerson, IThing {
  __typename: "Admin";
  name: string;
  // Should have greeting added
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:7:1 - error: Cannot extend non-object type "IThing".

 7 interface IThing {
   ~~~~~~~~~~~~~~~~~~
 8   name: string;
   ~~~~~~~~~~~~~~~
 9   // Should have greeting added
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10 }
   ~

  src/tests/fixtures/extend_interface/addStringFieldToInterfaceImplementedByInterface.ts:2:1
    2 export function greeting(thing: IThing): string {
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3   return `Hello ${thing.name}!`;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    4 }
      ~
    Related location
